2003-08-18  Uwe Pross  <uwe.pross@gmx.net>

	* screenshots/Thomas_Adam-desk-1024x768.php: 
	* screenshots/Thomas_Adam-desk-1024x768.png: 
	* screenshots/Thomas_Adam-desk-1024x768-thumb.jpg:
	* screenshots/desktops.php:
	Added screenshot from Thomas Adam.

2003-08-17  Uwe Pross  <uwe.pross@gmx.net>

	* logo-competition/logos_new.php:
	added logos from Phil Harper

2003-08-14  Uwe Pross  <uwe.pross@gmx.net>

	* logo-competition/logos/Daniel_J_Parks/*: 
	* logo-competition/logos/Branko_Collin/*: 
	* logo-competition/logos_new.php: 
	added logos
	
2003-08-08  Uwe Pross  <uwe.pross@gmx.net>

	* logo-competition/logos_new.php:
	* logo-competition/logos/Krzysztof_Bartczak/*:
	added logo
	* documentation/faq/index.php:
	updated faq
	
2003-08-07  Uwe Pross  <uwe.pross@gmx.net>

	* logo-competition/logos_new.php: 
	* logo-competition/logos/Patrick_Collison/*:
	added logo

2003-08-06  Uwe Pross  <uwe.pross@gmx.net>

	* logo-competition/logos/Greg_Rymer/*: 
	* logo-competition/logos_new.php: 
	* logo-competition/logos/Patrick_Collison/*:
	added logos

2003-08-04  Uwe Pross  <uwe.pross@gmx.net>

	* logo-competition/logos_new.php: 
	* logo-competition/logos/Phil_Harper/index.php: 
	added logo. added overview pics.

2003-07-30  Uwe Pross  <uwe.pross@gmx.net>

	* links.php: 
	* index.php: 
	Added link to wiki page

	* contact/index.php:
	Added heading for IRC Channels
	
2003-07-28  Uwe Pross  <uwe.pross@gmx.net>

	* news/news2php: 
	* news/index.php:
	fixed minor bug in news generation script. regenerated news page

	* logo-competition/logos/Eric_Hafner/*:
	* logo-competition/logos/Daniel_Gadziemski/*:
	* logo-competition/logos_new.php:
	added logos

2003-07-23  Uwe Pross  <uwe.pross@gmx.net>

	* COPYING: 
	* definitions.inc:
	added gpl license file and statement.
	
2003-07-22  Uwe Pross  <uwe.pross@gmx.net>

	* web-theme/themes/theme_descriptions.inc: 
	* web-theme/classes/pager_on_top_class.inc:
	changed default look to a more fancy one ;-)
