@@ -1,0 +1,11 @@
+<?php if( strlen("$navigation_check") > 0 ) return; ?>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+  <head>
+    <title>Jules Alberts Desktop</title>
+  </head>
+
+  <body bgcolor="#000000" color="#dddddd">
+    <a href="javascript:self.close()"><img src="Jules_Alberts-desk-1024x768.png"></a>
+  </body>
+</html>
